adding filter items

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <main>
       <div class="container">
         <div class="row">
-          <div class="col menu d-flex">
+          <div class="col menu all appetizer d-flex">
             <figure class="d-flex">
               <div class="photo d-flex">
                 <span class="material-symbols-outlined"> imagesmode </span>
@@ -87,7 +87,7 @@
               <span class="material-symbols-outlined"> Add </span>
             </button>
           </div>
-          <div class="col menu d-flex">
+          <div class="col menu all appetizer d-flex">
             <figure class="d-flex">
               <div class="photo d-flex">
                 <span class="material-symbols-outlined"> imagesmode </span>
@@ -113,7 +113,7 @@
               <span class="material-symbols-outlined"> Add </span>
             </button>
           </div>
-          <div class="col menu d-flex">
+          <div class="col menu all appetizer d-flex">
             <figure class="d-flex">
               <div class="photo d-flex">
                 <span class="material-symbols-outlined"> imagesmode </span>
@@ -139,7 +139,7 @@
               <span class="material-symbols-outlined"> Add </span>
             </button>
           </div>
-          <div class="col menu d-flex">
+          <div class="col menu all mainCourse d-flex">
             <figure class="d-flex">
               <div class="photo d-flex">
                 <span class="material-symbols-outlined"> imagesmode </span>
@@ -165,7 +165,7 @@
               <span class="material-symbols-outlined"> Add </span>
             </button>
           </div>
-          <div class="col menu d-flex">
+          <div class="col menu all mainCourse d-flex">
             <figure class="d-flex">
               <div class="photo d-flex">
                 <span class="material-symbols-outlined"> imagesmode </span>
@@ -191,7 +191,7 @@
               <span class="material-symbols-outlined"> Add </span>
             </button>
           </div>
-          <div class="col menu d-flex">
+          <div class="col menu all mainCourse d-flex">
             <figure class="d-flex">
               <div class="photo d-flex">
                 <span class="material-symbols-outlined"> imagesmode </span>
@@ -217,7 +217,7 @@
               <span class="material-symbols-outlined"> Add </span>
             </button>
           </div>
-          <div class="col menu d-flex">
+          <div class="col menu all mainCourse d-flex">
             <figure class="d-flex">
               <div class="photo d-flex">
                 <span class="material-symbols-outlined"> imagesmode </span>
@@ -243,7 +243,7 @@
               <span class="material-symbols-outlined"> Add </span>
             </button>
           </div>
-          <div class="col menu d-flex">
+          <div class="col menu all mainCourse d-flex">
             <figure class="d-flex">
               <div class="photo d-flex">
                 <span class="material-symbols-outlined"> imagesmode </span>
@@ -269,7 +269,7 @@
               <span class="material-symbols-outlined"> Add </span>
             </button>
           </div>
-          <div class="col menu d-flex">
+          <div class="col menu all dessert d-flex">
             <figure class="d-flex">
               <div class="photo d-flex">
                 <span class="material-symbols-outlined"> imagesmode </span>
@@ -295,7 +295,59 @@
               <span class="material-symbols-outlined"> Add </span>
             </button>
           </div>
-          <div class="col menu d-flex">
+          <div class="col menu all dessert d-flex">
+            <figure class="d-flex">
+              <div class="photo d-flex">
+                <span class="material-symbols-outlined"> imagesmode </span>
+              </div>
+              <figcaption>
+                <p>Menu A</p>
+                <h3>100 K</h3>
+                <div class="btn">
+                  <button type="button" class="minQty" disabled>-</button>
+                  <input
+                    type="number"
+                    value="0"
+                    min="1"
+                    max="10"
+                    class="qtyValue"
+                    disabled
+                  />
+                  <button type="button" class="addQty">+</button>
+                </div>
+              </figcaption>
+            </figure>
+            <button type="button" class="d-flex addToCart">
+              <span class="material-symbols-outlined"> Add </span>
+            </button>
+          </div>
+          <div class="col menu all dessert d-flex">
+            <figure class="d-flex">
+              <div class="photo d-flex">
+                <span class="material-symbols-outlined"> imagesmode </span>
+              </div>
+              <figcaption>
+                <p>Menu A</p>
+                <h3>100 K</h3>
+                <div class="btn">
+                  <button type="button" class="minQty" disabled>-</button>
+                  <input
+                    type="number"
+                    value="0"
+                    min="1"
+                    max="10"
+                    class="qtyValue"
+                    disabled
+                  />
+                  <button type="button" class="addQty">+</button>
+                </div>
+              </figcaption>
+            </figure>
+            <button type="button" class="d-flex addToCart">
+              <span class="material-symbols-outlined"> Add </span>
+            </button>
+          </div>
+          <div class="col menu all dessert d-flex">
             <figure class="d-flex">
               <div class="photo d-flex">
                 <span class="material-symbols-outlined"> imagesmode </span>
