add btn to cart

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           </div>
           <button type="button" class="cart">
             <span class="material-symbols-outlined"> shopping_cart </span>
+            <span class="qtyInCart">0</span>
           </button>
         </div>
       </div>
