add items to detail cart

--- a/index.html
+++ b/index.html
@@ -383,13 +383,20 @@
     <section id="detail__cart">
       <div class="container">
         <figcaption class="header__cart d-flex">
-          <button type="button" class="back__cart">⬅</button>
-          <p>Name Customer</p>
+          <div class="col d-flex">
+            <button type="button" class="back__cart">⬅</button>
+            <p>Name Customer</p>
+          </div>
+          <figcaption class="position__customer">
+            <h3>No. Meja</h3>
+            <p>Nomor Meja</p>
+          </figcaption>
         </figcaption>
-        <figcaption class="position__customer">
-          <h3>No. Meja</h3>
-          <p>Nomor Meja</p>
-        </figcaption>
+        <ul class="d-flex">
+          <li>Items</li>
+          <li>Qty</li>
+          <li>Total</li>
+        </ul>
         <div class="row"></div>
         <button type="button" class="process d-flex">Proses Pesanan</button>
         <button type="button" class="cancel d-flex">Batalkan Pesanan</button>
